# rust-for-data

./: 404.html  Makefile  README.md  chapter_1.html  chapter_2.html  chapter_3.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy.yml  mdbook.yml
benchmarks/: Makefile  ch3_fetch_api.md  ch3_serialized_wxrs.md  ch4_offline_benchmark.md  ch4_python_serialized_benchmark.md  ch4_rust_serialized_benchmark.md  ch4_serialized.md  ch5.md  chapter_3_python_wxpy.md  chapter_3_rust_wxrs.md  create_benchmark.sh  wxpy.csv  wxrs.csv
lib/: .gitignore  species_code.csv
rust4data/: book.toml
rust4data-book/: Makefile  book.toml
rust4data-book/src/: AUTHOR.md  SUMMARY.md  Transforming Data.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md
rust4data-book/theme/: head.hbs
rust4data/src/: SUMMARY.md  chapter_1.md  chapter_2.md  ideas.md
wxpy/: pyproject.toml
wxpy/wxpy/: main.py
wxpy/wxpy/ch4/: serialized.py  serialized_benchmark.py  serialized_offline_benchmark.py
wxpy/wxpy/ch5/: birds.py  ch5.py  ch5_pandas.py
wxrs/: Cargo.toml
wxrs/src/: main.rs
